Fix stretchy images

--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -27,6 +27,8 @@
   border: 1px solid #dcdcd4;
   border-radius: 15px;
   width: 100%;
+  object-fit: cover;
+  object-position: 50% 50%;
 }
 
 .offer div {
